# Task3

./: CLAUDE.md  LICENSE  eda.ipynb  eda_executed.ipynb  example_submission.py  gemini.ipynb  linear_regression.ipynb  pyproject.toml
data/: gemini2.ipynb
