[project]
name = "task3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.0",
    "matplotlib>=3.10",
    "numpy>=2.4.3",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pyarrow>=19.0",
    "requests>=2.32.5",
    "scikit-learn>=1.6",
    "seaborn>=0.13",
    "statsmodels>=0.14.6",
]
